move div and add class percentToNextLevel

--- a/react/moveit-next/src/styles/components/ExperienceBar.module.css
+++ b/react/moveit-next/src/styles/components/ExperienceBar.module.css
@@ -17,14 +17,13 @@
   position: relative;
 }
 
-.experienceBar > div > div {
+.experienceBar > div > .percentToNextLevel {
   height: 4px;
   border-radius: 4px;
   background: var(--green);
 }
 
-/* span.currentExperience { */
-.experienceBar > div > span {
+.experienceBar > div > .currentExperience {
   position: absolute;
   top: 12px;
   transform: translateX(-50%);
