--- a/node/api/src/views/emails/npsMail.hbs
+++ b/node/api/src/views/emails/npsMail.hbs
@@ -46,16 +46,16 @@
   </div>
 
   <div class="answers">
-    <a class="value" href="{{link}}/1?u={{id}}">1</a>
-    <a class="value" href="{{link}}/2?u={{id}}">2</a>
-    <a class="value" href="{{link}}/3?u={{id}}">3</a>
-    <a class="value" href="{{link}}/4?u={{id}}">4</a>
-    <a class="value" href="{{link}}/5?u={{id}}">5</a>
-    <a class="value" href="{{link}}/6?u={{id}}">6</a>
-    <a class="value" href="{{link}}/7?u={{id}}">7</a>
-    <a class="value" href="{{link}}/8?u={{id}}">8</a>
-    <a class="value" href="{{link}}/9?u={{id}}">9</a>
-    <a class="value" href="{{link}}/10?u={{id}}">10</a>
+    <a class="value" href="{{link}}/1?survey_user_id={{id}}">1</a>
+    <a class="value" href="{{link}}/2?survey_user_id={{id}}">2</a>
+    <a class="value" href="{{link}}/3?survey_user_id={{id}}">3</a>
+    <a class="value" href="{{link}}/4?survey_user_id={{id}}">4</a>
+    <a class="value" href="{{link}}/5?survey_user_id={{id}}">5</a>
+    <a class="value" href="{{link}}/6?survey_user_id={{id}}">6</a>
+    <a class="value" href="{{link}}/7?survey_user_id={{id}}">7</a>
+    <a class="value" href="{{link}}/8?survey_user_id={{id}}">8</a>
+    <a class="value" href="{{link}}/9?survey_user_id={{id}}">9</a>
+    <a class="value" href="{{link}}/10?survey_user_id={{id}}">10</a>
   </div>
 
   <br />
