--- a/react/moveit-next/src/styles/components/Countdown.module.css
+++ b/react/moveit-next/src/styles/components/Countdown.module.css
@@ -59,9 +59,13 @@
   transition: background 0.2s;
 }
 
-.countdownButton:not(:disabled):hover {
+.countdownButton:hover {
   background: var(--blue-dark);
 }
+
+/* .countdownButton:not(:disabled):hover {
+  background: var(--blue-dark);
+} */
 
 .countdownButton:disabled {
   background: var(--white);
@@ -72,6 +76,10 @@
 .countdownButtonActive {
   background: var(--white);
   color: var(--title);
+}
+
+.countdownButtonActive img {
+  color: var(--text);
 }
 
 .countdownButtonActive:hover {
